fix doi tag text alignment

--- a/src/app/shared/components/tag/tag.component.scss
+++ b/src/app/shared/components/tag/tag.component.scss
@@ -27,6 +27,7 @@ app-tag {
       border-bottom-left-radius: 20px;
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
+      align-content: center;
     }
 
     .tag-content {
